files/kuard/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kuard
spec:
  selector:
    app: kuard
  ports:
    - port: 8080
      protocol: TCP
