files/kuard/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kuard
spec:
  rules:
    - host: kuard.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 8080
